<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中艺</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- main tab小标题 -->
    <string name="tab_informantion">最新消息</string>
    <string name="message_detail">消息详情</string>
    <string name="tab_selected_brand">精选产品</string>
    <string name="tab_location">店铺位置</string>
    <string name="tab_personal">为您服务</string>
    <string name="personal_bonus">积分查询</string>
    <string name="personal_order">我的预约</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="product_detail">产品介绍</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="not_network">没有网络,请检查网络状态!</string>
    <string name="time_out">请求超时,请重试!</string>
    <string name="request_fail">请求失败,请重试!</string>
    <string name="not_data">没有数据</string>
    <string name="arrive_shop_time">到店时间:</string>
    <string name="deleted_successfully">删除成功</string>
    <string name="order_successfully">预约成功</string>
    <string name="all">全部</string>
    <string name="search_hint">请输入要搜索的店名或者区域</string>
    <string name="cac">中艺</string>
    <string name="google_service_no_support">您的手机未支持谷歌服务，请联系手机厂商</string>
    <string name="confirm_to_call">确定要打电话给</string>
    <string name="confirm">确定</string>
    <string name="confirm_order">确定预约</string>
    <string name="cancle">取消</string>
    <string name="which_shop">欲到访门店</string>
    <string name="what_event">到访事宜</string>
    <string name="your_name">阁下姓名</string>
    <string name="your_tel">阁下电话</string>
    <string name="your_email">阁下邮箱</string>
    <string name="choose_date">选择日期</string>
    <string name="choose_time">选择时间</string>
    <string name="logout">注销</string>
    <string name="logout_confirm">你确定要注销?</string>
    <string name="logout_succeed">注销成功</string>
    <string name="shop_tel">联系电话:</string>
    <string name="shop_address">地址:</string>
    <string name="input_account">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="please_login">您还没登录</string>
    <string name="login">登录</string>

</resources>